--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "Mohit Yadav",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.7",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
     "mongoose": "^8.4.1"
   },
@@ -33,6 +35,7 @@
     "@controllers": "app/http/controllers",
     "@modules": "app/modules",
     "@models": "app/models",
+    "@middleware": "app/middleware",
     "@services": "app/services",
     "@routes": "app/http/routes",
     "@utils": "app/utils"
