--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_PATH=. NODE_ENV=localDevelopment mocha --timeout 10000",
     "start": "NODE_PATH=. NODE_ENV=localDevelopment nodemon index.js",
     "dev": "nodemon index.js"
   },
@@ -21,14 +21,17 @@
     "mongoose": "^8.4.1"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "eslint": "^8.18.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-node": "^4.1.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.1.0",
+    "mocha": "^10.4.0",
     "nodemon": "^2.0.18",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "supertest": "^7.0.0"
   },
   "_moduleAliases": {
     "@root": ".",
